<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.co.ajou.lalulintasforecast.HelpActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/cara_mengunakan_aplikasi"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHighlight="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/article_subheadingLok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance"
        android:text="@string/menambahkan_lokasi"/>

    <ScrollView
        android:id="@+id/viewArticleLok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_subheadingLok">

    <TextView
        android:id="@+id/articleLok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5sp"
        android:text="@string/article_text"/>
    </ScrollView>

    <TextView
        android:id="@+id/article_subheadingFeatures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewArticleLok"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance"
        android:text="@string/features"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_subheadingFeatures">

        <TextView
            android:id="@+id/articleFeatures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/article_textFeatures"/>
    </ScrollView>



</RelativeLayout>